Allow More External Modes (#10)
* change external interface

* add 3 more modes

* fixed a format bug

* add some output to debug

* output more

* Update level_feedback.py

* allow more prints

* Update __init__.py

* Update code_utils.py

* Update code_utils.py

* Update __init__.py

* make expert edits 2_turn similar to other modes

* add plain

* Update README.md

--- a/configs/mt_magrpo_che_config.yaml
+++ b/configs/mt_magrpo_che_config.yaml
@@ -41,8 +41,9 @@ magrpo:
   num_agents: 2
   # Multi-turn specific parameters
   turn_gradient_weights: [1.2, 0.8]  # Weights for different turns
-  expert_model: "deepseek-coder"  # Expert model for feedback
   early_termination_weight: 2.0
+  external_mode: "expert_edits"    # Options: expert_edits (default), level_passed, level_feedback
+  expert_model: "deepseek-coder"   # Used by expert_edits mode only
 
 # Wandb configuration
 wandb:
