add single agent multi-turn (#12)
* add single agent multiturn

* add early stop

* format: pre-commit fixes

* format: pre-commit fixes

--- a/configs/grpo_che_config.yaml
+++ b/configs/grpo_che_config.yaml
@@ -36,6 +36,8 @@ grpo:
   max_new_tokens: 256
   temperature: 0.8
   top_p: 0.95
+  # Early termination threshold for single-agent (GRPO)
+  early_termination_threshold: 2.1
 
 # Wandb configuration
 wandb:
