--- a/configs/mt_grpo_he_config.yaml
+++ b/configs/mt_grpo_he_config.yaml
@@ -1,5 +1,4 @@
-# Configuration for Multi-Turn HumanEval training with MAGRPO
-# This file defines all parameters for multi-turn training experiments
+# Configuration for Multi-Turn HumanEval training with GRPO (single-agent)
 
 # Model configuration
 model:
@@ -26,8 +25,8 @@ output:
   base_dir: "../../../projects/bepg/sliu30/output_mt"
   save_final_model: true
 
-# MAGRPO training configuration (multi-turn enabled via num_turns)
-magrpo:
+# GRPO training configuration (multi-turn enabled via num_turns)
+grpo:
   num_turns: 2  # Set > 1 for multi-turn training
   num_train_epochs: 7
   per_device_train_batch_size: 1
@@ -36,18 +35,19 @@ magrpo:
   save_steps: 200
   num_generations: 4
   max_new_tokens: 256
-  num_agents: 2
+  temperature: 0.8
+  top_p: 0.95
   # Multi-turn specific parameters
   turn_gradient_weights: [1.2, 0.8]  # Weights for different turns
   early_termination_weight: 2.0  # Weight for early termination reward
-  early_termination_threshold: 4.0
-  external_mode: "expert_edits"    # Options: expert_edits (default), level_passed, level_feedback
+  early_termination_threshold: 2.1
+  external_mode: "expert_edits"    # Options: expert_edits (default), level_passed, level_feedback, passed, plain
   expert_model: "deepseek-coder"   # Used by expert_edits mode only
 
 # Wandb configuration
 wandb:
   project: "mlrl"
   entity: "nu-llpr"
-  name: "mt_magrpo_humaneval"  # Will be appended with model name in script
+  name: "mt_grpo_humaneval"  # Will be appended with model name in script
   dir: "../../../projects/bepg/sliu30"
-  tags: ["mt_magrpo", "humaneval", "multi-agent", "multi-turn"]
+  tags: ["mt_grpo", "humaneval", "single-agent", "multi-turn"]
