Fix the random handoff and change default param (#14)
* make random default

* reset train num and levelfeedback as default

* delete files no use

* fix che train too less

* Config and external overhaul:\n\n- Introduce unified external section (mode, sandbox_slice, original/previous, expert_model).\n- Default external.mode=level_feedback; sandbox_slice=1 (supports 0/None/'all').\n- Handoff handled in CoMLRL trainer with strict modes; expose magrpo/grpo.handoff.\n- Update HumanEval/CHE splits (HE train 33:163, eval :32; CHE train 16:, eval :16).\n- Set output.save_final_model=false by default.\n- Set wandb.dir and output.base_dir to storage paths by trainer/mode:\n  * ST GRPO: output_st_grpo, ST MAGRPO: output_st_magrpo\n  * MT GRPO: output_mt_grpo,  MT MAGRPO: output_mt_magrpo\n- Rename expert model key to external.expert_model (used only for expert_edits).\n- Simplify YAML comments to section headers only.\n- Read external.* in train_magrpo.py and train_grpo.py; defaults adjusted.\n- README: clarify external keys and sandbox_slice semantics.

* Remove unnecessary try/except; robust sandbox_slice parsing without exceptions; minimal default tags

* Fix: define external_cfg before use; remove duplicate assignments in train_magrpo.py and train_grpo.py

* Fix: handle dataset load failure in train_magrpo.py (return early) to avoid UnboundLocalError

* Configs: reduce num_train_epochs by 20% (rounded) across all YAMLs

--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -1,9 +1,6 @@
-# Configuration for HumanEval training with MAGRPO
-# This file defines all parameters for training experiments
-
-# Model configuration
+# model
 model:
-  name: "Qwen/Qwen2.5-Coder-3B"  # Options: "Qwen/Qwen2.5-Coder-3B", "bigcode/starcoder2-3b", etc.
+  name: "Qwen/Qwen2.5-Coder-3B"
   type: "qwen"
   temperature: 0.7
   top_p: 0.9
@@ -14,21 +11,28 @@ model:
     trust_remote_code: true
     torch_dtype: "auto"
 
-# Dataset configuration
+# dataset
 dataset:
   name: "openai/openai_humaneval"
-  type: "humaneval"  # Used to select formatters and reward function
-  train_split: "test[33:133]"
+  type: "humaneval"
+  train_split: "test[33:163]"
   eval_split: "test[:32]"
 
-# Output configuration
+# output
 output:
-  base_dir: "../../../projects/bepg/sliu30/output"
-  save_final_model: true
+  base_dir: "../../../work/hdd/bepg/sliu30/output_st_magrpo"
+  save_final_model: false
 
-# MAGRPO training configuration
+# external
+external:
+  mode: "level_feedback"
+  sandbox_slice: 1
+  original_prompt: true
+  previous_response: true
+
+# magrpo
 magrpo:
-  num_train_epochs: 10
+  num_train_epochs: 8
   per_device_train_batch_size: 1
   learning_rate: 2.0e-5
   logging_steps: 50
@@ -36,13 +40,13 @@ magrpo:
   num_generations: 4
   max_new_tokens: 256
   num_agents: 2
-  # Early termination threshold for multi-agent (MAGRPO)
+  handoff: random
   early_termination_threshold: 4.0
 
-# Wandb configuration
+# wandb
 wandb:
   project: "mlrl"
   entity: "nu-llpr"
-  name: "magrpo_humaneval"  # Will be appended with model name in script
-  dir: "../../../projects/bepg/sliu30"
+  name: "magrpo_humaneval"
+  dir: "../../../work/hdd/bepg/sliu30/output_st_magrpo"
   tags: ["magrpo", "humaneval", "multi-agent"]
