--- a/configs/grpo_che_config.yaml
+++ b/configs/grpo_che_config.yaml
@@ -1,6 +1,4 @@
-# Configuration for CoopHumanEval single-agent training with GRPO
-
-# Model configuration
+# model
 model:
   name: "Qwen/Qwen2.5-Coder-3B"
   type: "qwen"
@@ -13,21 +11,28 @@ model:
     trust_remote_code: true
     torch_dtype: "auto"
 
-# Dataset configuration
+# dataset
 dataset:
-  name: "CoMLRL/CoopHumaneval"
-  type: "coophumaneval"  # Used to select formatters and reward function
-  train_split: "test[:50]"
-  eval_split: "test[50:66]"
+  name: "CoMLRL/CoopHumanEval"
+  type: "coophumaneval"
+  train_split: "test[16:]"
+  eval_split: "test[:16]"
 
-# Output configuration
+# output
 output:
-  base_dir: "../../../projects/bepg/tchen19/output"
-  save_final_model: true
+  base_dir: "../../../work/hdd/bepg/sliu30/output_st_grpo"
+  save_final_model: false
 
-# GRPO training configuration
+# external
+external:
+  mode: "level_feedback"
+  sandbox_slice: 1
+  original_prompt: true
+  previous_response: true
+
+# grpo
 grpo:
-  num_train_epochs: 20  # Same as multi-agent CHE
+  num_train_epochs: 16
   per_device_train_batch_size: 1
   learning_rate: 1.0e-5
   logging_steps: 50
@@ -36,13 +41,13 @@ grpo:
   max_new_tokens: 256
   temperature: 0.8
   top_p: 0.95
-  # Early termination threshold for single-agent (GRPO)
+  handoff: random
   early_termination_threshold: 2.1
 
-# Wandb configuration
+# wandb
 wandb:
   project: "mlrl"
   entity: "nu-llpr"
-  name: "grpo_coophumaneval"  # Will be appended with model name in script
-  dir: "../../../projects/bevi/sliu30"
+  name: "grpo_coophumaneval"
+  dir: "../../../work/hdd/bepg/sliu30/output_st_grpo"
   tags: ["grpo", "coophumaneval", "single-agent"]
