--- a/configs/mt_grpo_che_config.yaml
+++ b/configs/mt_grpo_che_config.yaml
@@ -1,7 +1,4 @@
-# Configuration for Multi-Turn CoopHumanEval training with GRPO (single-agent)
-# Based on mt_magrpo_che_config.yaml parameters but adapted for single-agent
-
-# Model configuration
+# model
 model:
   name: "Qwen/Qwen2.5-Coder-3B"
   type: "qwen"
@@ -14,22 +11,29 @@ model:
     trust_remote_code: true
     torch_dtype: "bfloat16"
 
-# Dataset configuration
+# dataset
 dataset:
-  name: "LovelyBuggies/CoopHumaneval"
-  type: "coophumaneval"  # Used to select formatters and reward function
-  train_split: "test[:50]"
-  eval_split: "test[50:66]"
+  name: "CoMLRL/CoopHumanEval"
+  type: "coophumaneval"
+  train_split: "test[16:]"
+  eval_split: "test[:16]"
 
-# Output configuration
+# output
 output:
-  base_dir: "../../../projects/bevi/sliu30/output_mt"
-  save_final_model: true
+  base_dir: "../../../work/hdd/bepg/sliu30/output_mt_grpo"
+  save_final_model: false
 
-# GRPO training configuration (multi-turn enabled via num_turns)
+# external
+external:
+  mode: "level_feedback"
+  sandbox_slice: 1
+  original_prompt: true
+  previous_response: true
+
+# grpo
 grpo:
   num_turns: 2
-  num_train_epochs: 10  # Reduced from 20 for multi-turn
+  num_train_epochs: 8
   per_device_train_batch_size: 1
   learning_rate: 2.0e-5
   logging_steps: 50
@@ -38,17 +42,15 @@ grpo:
   max_new_tokens: 256
   temperature: 0.8
   top_p: 0.95
-  # Multi-turn specific parameters
+  handoff: random
   turn_gradient_weights: [1.2, 0.8]
   early_termination_weight: 2.0
   early_termination_threshold: 2.1
-  external_mode: "expert_edits"    # Options: expert_edits (default), level_passed, level_feedback, passed, plain
-  expert_model: "deepseek-coder"   # Used by expert_edits mode only
 
-# Wandb configuration
+# wandb
 wandb:
   project: "mlrl"
   entity: "nu-llpr"
-  name: "mt_grpo_coophumaneval"  # Will be appended with model name in script
-  dir: "../../../projects/bevi/sliu30"
+  name: "mt_grpo_coophumaneval"
+  dir: "../../../work/hdd/bepg/sliu30/output_mt_grpo"
   tags: ["mt_grpo", "coophumaneval", "single-agent", "multi-turn"]
