change reward to return (#16)
* Remove handoff/early-termination/turn-weights; add discount=0.9 default; update configs and README

* Clean configs/scripts: remove handoff/turn weights/early termination mentions; add discount; minor prints; README cleanup

* Fix duplicate discount arg in MAGRPOConfig init

* yes

* clean

* Update mt_code_logger.py

* rm ours

* remove redundant

* Update mt_code_logger.py

* set reward shift default to be -4

* change to -2.1

* cross joint

* set joint mode to be cross

--- a/configs/magrpo_che_config.yaml
+++ b/configs/magrpo_che_config.yaml
@@ -41,10 +41,10 @@ magrpo:
   max_new_tokens: 256
   temperature: 0.8
   top_p: 0.95
+  joint_mode: cross
   num_agents: 2
-  handoff: random
-  early_termination_threshold: 4.0
-  reward_shift: null
+  discount: 0.9
+  reward_shift: -4
 
 # wandb
 wandb:
