--- a/configs/mt_magrpo_he_config.yaml
+++ b/configs/mt_magrpo_he_config.yaml
@@ -40,12 +40,10 @@ magrpo:
   save_steps: 200
   num_generations: 4
   max_new_tokens: 256
+  joint_mode: cross
   num_agents: 2
-  handoff: random
-  turn_gradient_weights: [1.2, 0.8]
-  early_termination_weight: 2.0
-  early_termination_threshold: 4.0
-  reward_shift: null
+  discount: 0.9
+  reward_shift: -4
 
 # wandb
 wandb:
