Add Normalize Adv and Epsilon-Clip Support (#18)
* add std and clip

* set default

* change default clip

* Update README.md

* new default no std, no clip

--- a/configs/grpo_che_config.yaml
+++ b/configs/grpo_che_config.yaml
@@ -47,6 +47,8 @@ grpo:
   discount: 0.9
   termination_threshold: -0.1
   reward_shift: -2.1
+  normalize_advantage: false
+  epsilon_clip: null
 
 # wandb
 wandb:
