--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -46,6 +46,8 @@ magrpo:
   discount: 0.9
   termination_threshold: -0.2
   reward_shift: -4
+  normalize_advantage: false
+  epsilon_clip: null
 
 # wandb
 wandb:
