--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -37,6 +37,8 @@ magrpo:
   learning_rate: 2.0e-5
   logging_steps: 50
   save_steps: 200
+  eval_interval: 4
+  eval_num_samples: 4
   num_generations: 4
   max_new_tokens: 256
   joint_mode: aligned
