--- a/configs/grpo_mbpp_config.yaml
+++ b/configs/grpo_mbpp_config.yaml
@@ -51,7 +51,7 @@ grpo:
 # wandb
 wandb:
   project: "mlrl"
-  entity: "nu-llpr"
+  entity: "OpenMLRL"
   name: "grpo_mbpp"
   dir: "output"
   tags: ["grpo", "mbpp"]
