fix: single-agent init

--- a/configs/grpo_che_config.yaml
+++ b/configs/grpo_che_config.yaml
@@ -43,6 +43,7 @@ grpo:
   joint_mode: aligned
   temperature: 0.8
   top_p: 0.95
+  top_k: null
   discount: 0.9
   termination_threshold: -0.1
   reward_shift: -2.1
